Add control extension conformance fixture